2005-08-16  Andy Wingo  <wingo@pobox.com>

	* examples/seeking/Makefile.am: Don't compile non-compiling
	compiled objects with the compiler.

	* examples/seeking/seek.c (make_dv_pipeline): Update for new DV
	elements.

2005-08-12  Philippe Khalaf <burger@speedy.org>
	* gst-libs/gst/rtp/gstbasertpdepayload.c:
	* gst-libs/gst/rtp/gstbasertpdepayload.h:
	  Made a thread to release the queue.
	  Removed timestamp conversion for now.

2005-08-10  Philippe Khalaf <burger@speedy.org>
	* gst-libs/gst/rtp/gstbasertpdepayload.c:
	* gst-libs/gst/rtp/gstbasertpdepayload.h:
	  Added rtp timestamp -> gst timestamp conversion.
	  Fixed several problems with queue.

2005-08-09  Tim-Philipp Müller  <tim at centricular dot net>

	* gst-libs/gst/audio/gstaudioclock.h:
	* gst-libs/gst/audio/gstaudiofilter.h:
	* gst-libs/gst/audio/gstaudiosink.h:
	* gst-libs/gst/audio/gstaudiosrc.h:
	* gst-libs/gst/audio/gstbaseaudiosink.h:
	* gst-libs/gst/audio/gstbaseaudiosrc.h:
	* gst-libs/gst/audio/gstringbuffer.h:
	* gst-libs/gst/net/gstnetbuffer.h:
	* gst-libs/gst/rtp/gstbasertpdepayload.h:
	* gst-libs/gst/rtp/gstrtpbuffer.h:
	  Add padding (you will need to rebuild gst-plugins-base,
	  gst-plugins and all applications afterwards!)

2005-08-09  Tim-Philipp Müller  <tim at centricular dot net>

	* gst-libs/gst/riff/riff-read.c: (gst_riff_read_chunk),
	(gst_riff_parse_chunk):
	  Fix bug in debug message and add some more debug messages.

2005-08-08  Edward Hervey  <edward@fluendo.com>

	* gst-libs/gst/riff/riff-media.c:
	backported updates since branch

2005-08-08  Andy Wingo  <wingo@pobox.com>

	* gst-libs/gst/audio/gstbaseaudiosink.c
	(gst_base_audio_sink_change_state): Open the device in NULL->READY
	like good elements should. Close on READY->NULL too.

	* gst-libs/gst/audio/gstaudiosink.c
	(gst_audioringbuffer_open_device,
	(gst_audioringbuffer_close_device, gst_audioringbuffer_acquire)
	(gst_audioringbuffer_release): Updates for new ring buffer API,
	hook into the new audio sink api.
